[gd_scene load_steps=10 format=3 uid="uid://binoy2bpne3jf"]

[ext_resource type="Texture2D" uid="uid://dxtb4ylf3plww" path="res://Objects/Door/leveldoor.png" id="1_do24k"]
[ext_resource type="Script" uid="uid://mauhn52888lv" path="res://Objects/Door/door.gd" id="1_g35bp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_do24k"]
atlas = ExtResource("1_do24k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g35bp"]
atlas = ExtResource("1_do24k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3224t"]
atlas = ExtResource("1_do24k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqj4o"]
atlas = ExtResource("1_do24k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lijeg"]
atlas = ExtResource("1_do24k")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_i23i6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_do24k")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g35bp")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_3224t")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_uqj4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lijeg")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g35bp"]
size = Vector2(47, 46)

[node name="Door" type="Node2D"]
script = ExtResource("1_g35bp")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i23i6")
animation = &"open"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, 9)
shape = SubResource("RectangleShape2D_g35bp")

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
